# HiKCamera

./: README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demos/: exception_handling.py  reconnect.py  save_image.py  save_video.py
docs/: camera_parameter_nodes.md  camera_parameter_nodes_zh.md  next_steps_deprecation_plan.md
src/hikcamera/: __init__.py  camera.py  enums.py  exceptions.py  params.py  sdk_wrapper.py  utils.py
tests/: conftest.py  test_camera.py  test_enums.py  test_exceptions.py  test_integration.py  test_params.py  test_reconnect_demo.py  test_save_demos.py  test_sdk_decode.py  test_sdk_image_ops.py  test_sdk_record.py  test_sdk_wrapper.py  test_use_sdk_decode_api.py  test_utils.py
